--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
                 </button>
                 <a class="navbar-brand" href="http://usgs.gov">
                     <img alt="USGS logo" src="images/usgs-logo.png">
-                    <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;Map application for proving i can automate</span>
+                    <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;Map application for proving i can automate. and it's going to work.</span>
                 </a>
             </div>
 
