--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Map application</title>
+    <title>test</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -66,7 +66,7 @@
                 </button>
                 <a class="navbar-brand" href="http://usgs.gov">
                     <img alt="USGS logo" src="images/usgs-logo.png">
-                    <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;Map applications</span>
+                    <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;test</span>
                 </a>
             </div>
 
