test for deploy

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>gen-wim-dev</title>
+    <title>gen-wim-devs</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
@@ -59,7 +59,7 @@
             </button>
             <a class="navbar-brand" href="http://usgs.gov">
                 <img alt="USGS logo" src="images/usgs-logo.png">
-                <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;gen-wim-dev</span>
+                <span class='hidden-xs' style='font-size:20px;display:inline-block;'>&nbsp;&nbsp;gen-wim-devs</span>
             </a>
         </div>
 
