--- a/src/index.html
+++ b/src/index.html
@@ -186,6 +186,7 @@
             </div>
 
             <div id="homeButton"></div>
+            <div id="locateButton"></div>
 
             <div id="latLngScale" class="latLngScale">
                 <span class="hover-content"> <b>Map scale </b></span>
